# shapelysmooth

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  noxfile.py  pyproject.toml  setup.py
shapelysmooth/: __init__.py
src/: smoothing.cpp  smoothing.hpp  wrapper.cpp
tests/: test_shapelysmooth.py  tests_shapelysmooth.py
